# irc-asm-diamond

./: .gitignore  Makefile  diamond.asm  diamond.py  main.asm  meson.build  test.c
tests/: diamond-4.txt
